--- a/setup.cfg
+++ b/setup.cfg
@@ -21,5 +21,5 @@ exclude = docs, kune/.ipynb_checkpoints, tests/.ipynb_checkpoints
 test = pytest
 
 [tool:pytest]
-collect_ignore = ['setup.py']
+# collect_ignore = ['setup.py']  -- deprecated, replaced tox.ini cli option
 
